# git-spoofer

./: .gitignore  README.md  grapher.py  pyproject.toml  resetter.py
resources/: art.csv
