[tool.poetry]
name = "git-spoofer"
version = "1.0.0"
description = ""
authors = ["pnicoli <pnicoli>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.3"
gitpython = "^3.1.44"
requests = "^2.32.3"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"


[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
